flux/apps/int/glance/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  labels:
    app.kubernetes.io/name: glance
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: glance
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
